# darkswarm

./: pyproject.toml  test.py
darkswarm/: manager.py
docker/: Dockerfile  preload.sh  prerun.sh  wait.py
tests/: test_darkswarm.py
