[tool.poetry]
name = "darkswarm"
version = "0.1.0"
description = ""
authors = ["Jeong Arm <arm@gurum.cc>"]

[tool.poetry.dependencies]
python = "^3.7"
docker = {extras = ["ssh"], version = "^4.3.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
